# thesis-code

./: README.md
camera_parameters/: calibration.txt  calibration_old.txt
image_acquisition_package/: CMakeLists.txt
image_acquisition_package/src/: GXDevice.cpp
image_processing_package/: CMakeLists.txt
image_processing_package/src/: Handler3D.cpp  RektNet.cpp  Yolo.cpp  main.cpp
image_publisher/: package.xml
image_publisher/src/: GXDevice.h  StereoCamera.cpp  StereoCamera.h  main.cpp
inference_package/: package.xml
inference_package/src/: Handler3D.hpp  RektNet.hpp  Yolo.hpp
src/: utils.hpp
